--- a/package.json
+++ b/package.json
@@ -6,9 +6,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.4.1",
+    "axios": "^0.21.1",
+    "markdown-it": "^12.2.0",
+    "marked": "^2.1.3",
     "next": "latest",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-slideshow-image": "^3.5.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.6",
