--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
     "react-slideshow-image": "^3.5.0"
   },
   "devDependencies": {
