--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
+    "react-markdown": "^6.0.3",
     "react-slideshow-image": "^3.5.0"
   },
   "devDependencies": {
