--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 API_URL_LOCAL=http://localhost:1337
 API_URL_STRAPI=https://cryptic-retreat-90035.herokuapp.com
+API_URL_API=https://strapi-redesf.herokuapp.com
