--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "axios": "^0.21.1",
     "markdown-it": "^12.2.0",
     "marked": "^2.1.3",
-    "next": "latest",
+    "next": "^11.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
